Some changes in the view of the project.

--- a/src/GUI/LoginPage.form
+++ b/src/GUI/LoginPage.form
@@ -96,6 +96,11 @@
             <border type="none"/>
             <children/>
           </grid>
+          <vspacer id="7c23e">
+            <constraints>
+              <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
         </children>
       </grid>
       <grid id="db7eb" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
