--- a/src/GUI/ProfilePage.form
+++ b/src/GUI/ProfilePage.form
@@ -16,12 +16,12 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="51f8b" class="javax.swing.JButton" binding="button1" default-binding="true">
+          <component id="51f8b" class="javax.swing.JButton" binding="profilePhotoButton">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Button"/>
+              <text value="Profile Photo"/>
             </properties>
           </component>
         </children>
