--- a/src/GUI/Garage.form
+++ b/src/GUI/Garage.form
@@ -3,14 +3,16 @@
   <grid id="27dc6" binding="productPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="42" y="47" width="802" height="561"/>
+      <xy x="42" y="47" width="617" height="363"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-16381681"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="6d593" class="javax.swing.JButton" binding="product4">
         <constraints>
-          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value=""/>
@@ -66,31 +68,27 @@
       </component>
       <component id="ee368" class="javax.swing.JButton" binding="product2">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16381681"/>
+          <borderPainted value="true"/>
+          <contentAreaFilled value="true"/>
           <text value=""/>
         </properties>
       </component>
       <component id="83686" class="javax.swing.JButton" binding="product3">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16381681"/>
           <text value=""/>
         </properties>
       </component>
       <component id="cac45" class="javax.swing.JButton" binding="product5">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="f97ee" class="javax.swing.JButton" binding="product1">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value=""/>
@@ -141,6 +139,18 @@
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="f97ee" class="javax.swing.JButton" binding="product1">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-16381681"/>
+          <borderPainted value="false"/>
+          <contentAreaFilled value="true"/>
+          <foreground color="-1"/>
           <text value=""/>
         </properties>
       </component>
