PasswordPage loosely designed.

--- a/src/GUI/ChangePasswordPage.form
+++ b/src/GUI/ChangePasswordPage.form
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.ChangePasswordPage">
-  <grid id="27dc6" binding="changeppanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="828" height="589"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-5131855"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="e0f7" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,24 +15,30 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5131855"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
       <grid id="cf683" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+        <margin top="0" left="50" bottom="0" right="50"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5131855"/>
+        </properties>
         <border type="none"/>
         <children>
           <grid id="9b2a0" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+            <margin top="0" left="50" bottom="0" right="0"/>
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-5131855"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="79645" class="javax.swing.JLabel">
@@ -38,6 +46,9 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-6094768"/>
+                  <font size="22" style="1"/>
+                  <foreground color="-6094768"/>
                   <text value="New Password"/>
                 </properties>
               </component>
@@ -46,6 +57,9 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-6094768"/>
+                  <font size="22" style="1"/>
+                  <foreground color="-6094768"/>
                   <text value="New Password (again)"/>
                 </properties>
               </component>
@@ -55,7 +69,10 @@
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <background color="-16768928"/>
+                  <font size="22" style="1"/>
+                </properties>
               </component>
               <component id="401e7" class="javax.swing.JPasswordField" binding="passwordField2" default-binding="true">
                 <constraints>
@@ -63,7 +80,10 @@
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <background color="-16768928"/>
+                  <font size="22" style="1"/>
+                </properties>
               </component>
             </children>
           </grid>
@@ -94,7 +114,9 @@
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5131855"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="2feb0" class="javax.swing.JButton" binding="changePasswordButton" default-binding="true">
@@ -102,6 +124,16 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-6094768"/>
+              <borderPainted value="false"/>
+              <contentAreaFilled value="false"/>
+              <doubleBuffered value="false"/>
+              <enabled value="true"/>
+              <focusTraversalPolicyProvider value="false"/>
+              <font size="22" style="1"/>
+              <foreground color="-1"/>
+              <opaque value="true"/>
+              <selected value="false"/>
               <text value="Change Password"/>
             </properties>
           </component>
