Added logo to LoginPage. Could not preview since the code has errors and do not compile! Will be checked later.

--- a/src/GUI/LoginPage.form
+++ b/src/GUI/LoginPage.form
@@ -25,7 +25,20 @@
           <opaque value="true"/>
         </properties>
         <border type="none"/>
-        <children/>
+        <children>
+          <component id="541c2" class="javax.swing.JLabel" binding="iconLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                <minimum-size width="750" height="-1"/>
+                <preferred-size width="750" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-5131855"/>
+              <text value="Label"/>
+            </properties>
+          </component>
+        </children>
       </grid>
       <grid id="40f2b" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
