Some changes to create & track issues.

--- a/src/GUI/AddProductPage.form
+++ b/src/GUI/AddProductPage.form
@@ -65,6 +65,7 @@
               <background color="-16768928"/>
               <font size="20" style="1"/>
               <foreground color="-1"/>
+              <text value=""/>
             </properties>
           </component>
           <component id="cc9de" class="javax.swing.JLabel">
